2007-12-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/sleep.c, posix/src/usleep.c: Add copyright header.
	* rtems/src/ratemonreportstatistics.c, rtems/src/timerserver.c:
	Minor cleanup to improve testability and eliminate dead code.

2007-12-12	Chris Johns <chrisj@rtems.org>

	* libblock/include/rtems/flashdisk.h, libblock/src/flashdisk.c:
	Add RTEMS license details.

2007-12-12	Chris Johns <chrisj@rtems.org>

	* Makefile.am, preinstall.am: Added
	libblock/include/rtems/flashdisk.h to the installed header list.
	* libblock/Makefile.am: Add flashdisk.c to the files to build.
	* libblock/include/rtems/flashdisk.h, libblock/src/flashdisk.c:
	New.

2007-12-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* libcsupport/preinstall.am, posix/preinstall.am, rtems/Makefile.am,
	rtems/preinstall.am, sapi/Makefile.am, sapi/preinstall.am,
	score/Makefile.am, score/preinstall.am: Revert testing patch.

2007-12-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/src/sched_rr_get_interval.c: Fix warning.

2007-12-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* posix/Makefile.am, posix/src/clockgetcpuclockid.c,
	posix/src/clockgetenableattr.c, posix/src/clockgettime.c,
	posix/src/clocksetenableattr.c, posix/src/clocksettime.c,
	posix/src/devctl.c, posix/src/execl.c, posix/src/execle.c,
	posix/src/execlp.c, posix/src/execv.c, posix/src/execve.c,
	posix/src/execvp.c, posix/src/fork.c, posix/src/mutexinit.c,
	posix/src/pthreadatfork.c, posix/src/pthreadgetcpuclockid.c,
	posix/src/pthreadkill.c, posix/src/semaphorecreatesupp.c,
	posix/src/sysconf.c, posix/src/wait.c, posix/src/waitpid.c: Split
	files into one function per file.
	* posix/src/aio_cancel.c, posix/src/aio_error.c, posix/src/aio_fsync.c,
	posix/src/aio_read.c, posix/src/aio_return.c,
	posix/src/aio_suspend.c, posix/src/aio_write.c,
	posix/src/lio_listio.c, posix/src/sched_getparam.c,
	posix/src/sched_getprioritymax.c, posix/src/sched_getprioritymin.c,